tests/ui/consts/miri_unleashed/extern-static.stderr
error[E0080]: cannot access extern static `DATA`
  --> $DIR/extern-static.rs:11:25
   |
LL |     unsafe { let _val = DATA; }
   |                         ^^^^ could not evaluate static initializer

error[E0080]: cannot access extern static `DATA`
  --> $DIR/extern-static.rs:15:14
   |
LL |     unsafe { DATA = 0; }
   |              ^^^^^^^^ could not evaluate static initializer

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
